<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_movie_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:adjustViewBounds="true"
                android:src="@drawable/example" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/acitivity_5dp_margin"
                android:layout_marginStart="@dimen/acitivity_5dp_margin"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/acitivity_5dp_margin"
                android:paddingRight="@dimen/acitivity_5dp_margin"
                android:paddingTop="3dp">

                <TextView
                    android:id="@+id/item_movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/detail_movie_title" />

                <TextView
                    android:id="@+id/item_movie_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textSize="14sp"
                    tools:text="@string/detail_movie_description" />

                <TextView
                    android:id="@+id/item_movie_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/acitivity_5dp_margin"
                    android:textSize="12sp"
                    tools:text="@string/detail_title_release_date" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>