<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alvin.favouritelistapp.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapseit"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="#E67E22"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/img_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/example_backdrop" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#a5000000" />

                </FrameLayout>

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="@dimen/acitivity_10dp_margin"
                    android:layout_marginStart="@dimen/acitivity_10dp_margin"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/example"
                    app:layout_collapseMode="parallax" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/img_poster"
                    android:layout_alignTop="@+id/img_poster"
                    android:layout_marginLeft="@dimen/acitivity_10dp_margin"
                    android:layout_marginStart="@dimen/acitivity_10dp_margin"
                    android:layout_toEndOf="@+id/img_poster"
                    android:layout_toRightOf="@+id/img_poster"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/detail_movie_title_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@+id/icon_favorite_unclicked"
                            android:layout_toStartOf="@+id/icon_favorite_unclicked"
                            android:textColor="#fff"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:text="Movie_Title" />

                        <ImageButton
                            android:id="@+id/icon_favorite_unclicked"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_favorite_border_white_24dp" />

                        <ImageButton
                            android:id="@+id/icon_favorite_clicked"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:visibility="invisible"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_favorite_clicked" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/detail_movie_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="Release_year" />

                    <TextView
                        android:id="@+id/detail_movie_tagline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/acitivity_5dp_margin"
                        android:layout_marginTop="@dimen/acitivity_5dp_margin"
                        android:textColor="#fff"
                        android:textStyle="italic"
                        tools:text="Tagline" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/ic_star"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            android:textColor="@android:color/white"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detail_movie_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/ic_star"
                            android:layout_alignTop="@+id/ic_star"
                            android:layout_marginLeft="@dimen/acitivity_5dp_margin"
                            android:layout_marginStart="@dimen/acitivity_5dp_margin"
                            android:layout_toEndOf="@+id/ic_star"
                            android:layout_toRightOf="@+id/ic_star"
                            android:gravity="center_vertical"
                            android:textColor="#fff"
                            android:textSize="17sp"
                            tools:text="0.0" />

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="#fff">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/acitivity_5dp_margin"
                android:layout_marginRight="@dimen/acitivity_5dp_margin"
                android:layout_marginTop="@dimen/acitivity_5dp_margin"
                app:cardBackgroundColor="#fff"
                app:cardElevation="2dp"
                app:contentPadding="@dimen/acitivity_5dp_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_overview"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_movie_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Movie Description" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/acitivity_5dp_margin"
                android:layout_marginRight="@dimen/acitivity_5dp_margin"
                android:layout_marginTop="@dimen/acitivity_5dp_margin"
                app:cardBackgroundColor="#fff"
                app:cardElevation="2dp"
                app:contentPadding="@dimen/acitivity_5dp_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_title_status"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/detail_title_release_date"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/detail_title_original_language"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/detail_title_runtime"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detail_movie_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="release_status" />

                        <TextView
                            android:id="@+id/detail_movie_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            tools:text="Release_date" />

                        <TextView
                            android:id="@+id/detail_movie_language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            tools:text="Language" />

                        <TextView
                            android:id="@+id/detail_movie_runtime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            tools:text="000 mins" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/acitivity_5dp_margin"
                android:layout_marginRight="@dimen/acitivity_5dp_margin"
                android:layout_marginTop="@dimen/acitivity_5dp_margin"
                app:cardBackgroundColor="#fff"
                app:cardElevation="2dp"
                app:contentPadding="@dimen/acitivity_5dp_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_title_homepage"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_movie_homepage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:clickable="true"
                        android:focusable="true"
                        android:textColorLink="@color/colorPrimary"
                        tools:text="https://www.google.com" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
